# chrome-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
config/: browser_config.json  claude_desktop_config_example.json
docs/: api.md  examples.md  no-screenshots-guide.md  project-structure.md  quickstart.md
examples/: usage_examples.py
scripts/: install.bat  start.bat
src/: __init__.py  browser_manager.py  server.py
tests/: test_browser.py
